--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "sentry/sentry-laravel": "^4.14"
+        "sentry/sentry-laravel": "^4.14",
+        "spatie/laravel-html": "^3.12",
+        "spatie/laravel-ignition": "^2.9",
+        "spatie/laravel-query-builder": "^6.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
