--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,6 @@
 sonar.projectKey=fzxcvbn_php-project-57
 sonar.organization=fzxcvbn
 
+
+sonar.sources=app/
 sonar.php.coverage.reportPaths=build/logs/clover.xml
