--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -16,7 +16,7 @@ RUN apt-get install -y nodejs
 WORKDIR /app
 
 COPY . .
-RUN composer install --ignore-platform-reqs
+RUN composer install
 RUN npm ci
 RUN npm run build
 
